--- a/agencia-de-viagens/src/components/assets/css/style.css
+++ b/agencia-de-viagens/src/components/assets/css/style.css
@@ -11,16 +11,26 @@
 }
 
 * {
-   
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
     text-decoration: none;
     font-family: var(--fonte-destaque), var(--fonte-padrao);
 }
 
+header {
+    height: 100%;
+    box-shadow: 0px 5px 15px #757575;
+    background-color: var(--cor0);
+    display: flex;
+    height: 70px;  
+}
+
 nav{
     box-shadow: 0px 5px 20px #757575;
-    width: 2150px;
-    height: 100px;
     font-size: 25px;
+    position: absolute;
+    width: 100%;
 }
 img {
     width: 190px;
@@ -55,9 +65,9 @@ h1 {
 footer{
     margin: 0;
     background-color: #F4ECFF;
-    width: 2150px;
     font-family: var(--fonte-destaque);
     align-items: center;
     position: absolute;
     font-size: 25px;
+    width: 100%;
 }
