--- a/agencia-de-viagens/src/views/css/Destino.css
+++ b/agencia-de-viagens/src/views/css/Destino.css
@@ -1,17 +1,12 @@
-
-
 .grid{
     margin: 50px;
-    margin-bottom: 50px;
-    margin-left: 120px;
-    margin-right: 0;
+    margin-top: 0px;
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    width: 100%;
-    grid-gap: 60px 200px;
+    grid-gap: 30px;
     align-items: center;
-    position: relative;
 }
+
 .grid > article{
     border-radius: 20px;
     background-color: var(--cor3);
@@ -60,9 +55,10 @@
     color: var(--cor1);
 }
 .selecao{
-    display: flex;
-    margin: 0px;
-    padding: 5px;
+   display: flex;
+   margin: 0px;
+   padding: 5px;
+   
 }
 
 .continentes{
@@ -86,7 +82,6 @@
 
 .paises li:hover{
     color: var(--cor2);
-    
     
 }
 
